--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Grace's Web Page</title>
+  </head>
+  <body>
+    <h1>Grace's Web Page</h1>
+    <p>This is my very first web page created on github!</p>
+    <h4>Grace Guo</h4>
+  </body>
+</html>
