--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Grace's Web Page</h1>
-    <p>This is my very first web page created on github!</p>
+    <p>This is my sample web page that links github to heroku. Yay!</p>
     <h4>Grace Guo</h4>
   </body>
 </html>
