--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Grace's Web Page</title>
   </head>
   <body>
+    <a href="css_demo.html">Link to demo file</a>
     <h1>Grace's Web Page</h1>
     <p>This is my sample web page that links github to heroku. Yay!</p>
     <h4>Grace Guo</h4>
