--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <a href="css_demo.html">Link to demo file</a>
+    <a href=" font-sample.html">Link to font sample</a>
     <h1>Grace's Web Page</h1>
     <p>This is my sample web page that links github to heroku. Yay!</p>
     <h4>Grace Guo</h4>
