--- a/font-sample.html
+++ b/font-sample.html
@@ -1,1 +1,7 @@
-<link href="https://fonts.googleapis.com/css?family=Nunito:400,700|PT+Sans|Slabo+27px" rel="stylesheet">
+<!DOCTYPE html>
+<html>
+<head>
+
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700|PT+Sans|Slabo+27px" rel="stylesheet">
+</html>
+</head>
