--- a/font-sample.html
+++ b/font-sample.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <title>Font Sample</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700|PT+Sans|Slabo+27px" rel="stylesheet">
+    <style>
+      .title{
+        font-family: 'Nunito', serif; 
+        font-size: 200%;
+        font-weight: 700;
+      }
+      .body{
+        font-family: 'Slabo', serif;
+      }
+      .subtitle{
+        font-family: 'PT+Sans', serif;
+      }
+   </style>
+ </head>
+ <body>
+  <p class="title">Font Sample Showcase</p>
+   <p class="subtitle">These are some fonts I like</p>
+  <p class="body">These are a few fonts I saw online that I took a fancy to. This one is called Slabo.</p>
+  </p>
+ </body>
 
-  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700|PT+Sans|Slabo+27px" rel="stylesheet">
  
 </html>
-</head>
