--- a/font-sample.html
+++ b/font-sample.html
@@ -13,13 +13,13 @@
         font-family: 'Slabo', serif;
       }
       .subtitle{
-        font-family: 'PT+Sans', serif;
+        font-family: 'PT Sans', sans-serif;
       }
    </style>
  </head>
  <body>
   <p class="title">Font Sample Showcase</p>
-   <p class="subtitle">These are some fonts I like</p>
+  <p class="subtitle">These are some fonts I like</p>
   <p class="body">These are a few fonts I saw online that I took a fancy to. This one is called Slabo.</p>
   </p>
  </body>
