--- a/font-sample.html
+++ b/font-sample.html
@@ -10,7 +10,7 @@
         font-weight: 700;
       }
       .body{
-        font-family: 'Slabo+27px', serif;
+        font-family: 'Slabo 27px', serif;
       }
       .subtitle{
         font-family: 'PT Sans', sans-serif;
