--- a/font-sample.html
+++ b/font-sample.html
@@ -8,6 +8,7 @@
         font-family: 'Nunito', serif; 
         font-size: 200%;
         font-weight: 700;
+        letter-spacing: 0.1em;
       }
       .body{
         font-family: 'Slabo 27px', serif;
@@ -18,9 +19,9 @@
    </style>
  </head>
  <body>
-  <p class="title">Font Sample Showcase</p>
-  <p class="subtitle">These are some fonts I like</p>
-  <p class="body">These are a few fonts I saw online that I took a fancy to. This one is called Slabo.</p>
+  <p class="title">FUNNY JOKE</p>
+  <p class="subtitle">Why didn't the chicken cross the road?</p>
+  <p class="body">Because it was dead!</p>
   </p>
  </body>
 
