--- a/font-sample.html
+++ b/font-sample.html
@@ -21,7 +21,7 @@
  <body>
   <p class="title">FUNNY JOKE</p>
   <p class="subtitle">Why didn't the chicken cross the road?</p>
-  <p class="body">Because it was dead!</p>
+  <p class="body">Because it was dead! 😂</p>
   </p>
  </body>
 
