--- a/font-sample.html
+++ b/font-sample.html
@@ -20,7 +20,7 @@
  </head>
  <body>
   <p class="title">FUNNY JOKE</p>
-  <p class="subtitle">Why didn't the chicken cross the road?</p>
+   <p class="subtitle">Why <b>didn't</b> the chicken cross the road?</p>
   <p class="body">Because it was dead! 😂</p>
   </p>
  </body>
