--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -28,12 +28,14 @@
   <body>
     <h1>MY HAND-SCULPTED JEWELRY</h1>
     <div class="container">
-    <img src="https://scontent-sjc3-1.cdninstagram.com/vp/5f9704543abc76beb45bce02ad7f683a/5D719797/t51.2885-15/e35/30589847_448294312271258_3225764006891356160_n.jpg?_nc_ht=scontent-sjc3-1.cdninstagram.com">
+      <img src="https://scontent-sjc3-1.cdninstagram.com/vp/5f9704543abc76beb45bce02ad7f683a/5D719797/t51.2885-15/e35/30589847_448294312271258_3225764006891356160_n.jpg?_nc_ht=scontent-sjc3-1.cdninstagram.com">
     </div>
     <div class="container">
-    <img src="https://scontent-sjc3-1.cdninstagram.com/vp/9b9a55acebec297c707d65184cb49997/5D57B1F6/t51.2885-15/e35/29416920_2408387665853406_4631118181346312192_n.jpg?_nc_ht=scontent-sjc3-1.cdninstagram.com">
+      <img src="https://scontent-sjc3-1.cdninstagram.com/vp/9b9a55acebec297c707d65184cb49997/5D57B1F6/t51.2885-15/e35/29416920_2408387665853406_4631118181346312192_n.jpg?_nc_ht=scontent-sjc3-1.cdninstagram.com">
     </div>
-
+    <div class="container">
+      <img src="https://scontent-sjc3-1.cdninstagram.com/vp/b9389942c7fbb83494c09f42eaa70085/5D75D46E/t51.2885-15/e35/28765892_355629981601347_3839835465683304448_n.jpg?_nc_ht=scontent-sjc3-1.cdninstagram.com">
+    </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
