--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -32,11 +32,14 @@
   <body>
     <div class="container">
        <div class="row justify-content-md-center">
-         <div class="col-12 col-md-auto">
-         <br>
-         <h1>MY HAND-SCULPTED JEWELRY</h1>
-         </div>
-      </div>
+        <div class="col-12 col-md-auto">
+        <br>
+          <h1 align="center">HAND-SCULPTED JEWELRY</h1>
+      <p class="subtitle", align="center">Made by Grace Guo</h2> 
+         
+    </div>
+    </div>
+    </div>
          
  
     <div class="row">
