--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -72,7 +72,7 @@
 <p>
 <div class="container" align="center">
   <div class="col-md-auto">
-    <a align="center" class="btn btn-info" href="https://www.etsy.com/shop/psychonautix/" role="button"><div class="button-font">Visit My Shop</div></a>
+    <a align="center" class="btn btn-info" href="https://www.etsy.com/shop/psychonautix/" role="button" target="_blank"><div class="button-font">Visit My Shop</div></a>
   </div>
 </div>
 
